# img-retrieval

./: .gitignore  README.md  SURVEY.md  pyproject.toml
configs/: example.yaml
src/compret/: __init__.py  cli.py  experiment.py
src/compret/data/: __init__.py  generate.py  schema.py
src/compret/eval/: __init__.py  metrics.py  retrieval.py
src/compret/models/: __init__.py  _torchutil.py  base.py  dummy.py  hf_model.py  hosted.py  openclip_model.py
