[project]
name = "compret"
version = "0.1.0"
description = "Compositional text->image retrieval experiment harness: do qualifying adjectives and composed objects survive retrieval?"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

# Heavy / optional backends. Install only what you want to test, e.g.
#   uv sync --extra openclip
[project.optional-dependencies]
openclip = ["torch>=2.2", "open_clip_torch>=2.24", "timm>=1.0"]
# einops + timm are required by Jina-CLIP (trust_remote_code) and EVA-based models.
hf = ["torch>=2.2", "transformers>=4.45", "sentencepiece", "protobuf", "einops", "timm>=1.0"]
hosted = ["cohere>=5.11", "voyageai>=0.3", "requests>=2.31"]  # parked; API-only backends
viz = ["matplotlib>=3.8", "pandas>=2.0"]
all = [
    "torch>=2.2", "open_clip_torch>=2.24",
    "transformers>=4.45", "sentencepiece", "protobuf", "einops", "timm>=1.0",
    "cohere>=5.11", "voyageai>=0.3", "requests>=2.31",
    "matplotlib>=3.8", "pandas>=2.0",
]

[project.scripts]
compret = "compret.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compret"]

[tool.uv]
# Pin the toolchain to 3.12 for broad ML-wheel compatibility (system python is 3.14).
